Load molecules list
Add the molecules_list.txt file
Fix memory leaks when loading a different molecule
Avoid empty names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ file(GLOB_RECURSE
     ${CMAKE_CURRENT_SOURCE_DIR}/**.frag
     ${CMAKE_CURRENT_SOURCE_DIR}/**.vert
     ${CMAKE_CURRENT_SOURCE_DIR}/textures/**.png
+    ${CMAKE_CURRENT_SOURCE_DIR}/molecules_list.txt
 )
 
 foreach(OPENGL_MOLECULES_RESOURCE_FILE ${OPENGL_MOLECULES_RESOURCES})
