Deal with multiple configuration generators like MSVC
Copy resource files to the proper directory when using multiple configuration generators

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,15 +18,15 @@ file(GLOB_RECURSE
 
 foreach(OPENGL_MOLECULES_RESOURCE_FILE ${OPENGL_MOLECULES_RESOURCES})
     add_custom_command(
-        OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${OPENGL_MOLECULES_RESOURCE_FILE}
+        OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/$<$<BOOL:$<CONFIG>>:$<CONFIG>/>${OPENGL_MOLECULES_RESOURCE_FILE}
         COMMAND ${CMAKE_COMMAND} -E copy
             ${CMAKE_CURRENT_SOURCE_DIR}/${OPENGL_MOLECULES_RESOURCE_FILE}
-            ${CMAKE_CURRENT_BINARY_DIR}/${OPENGL_MOLECULES_RESOURCE_FILE}
+            ${CMAKE_CURRENT_BINARY_DIR}/$<$<BOOL:$<CONFIG>>:$<CONFIG>/>${OPENGL_MOLECULES_RESOURCE_FILE}
         DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${OPENGL_MOLECULES_RESOURCE_FILE}
   )
 endforeach()
 
-list(TRANSFORM OPENGL_MOLECULES_RESOURCES PREPEND ${CMAKE_CURRENT_BINARY_DIR}/)
+list(TRANSFORM OPENGL_MOLECULES_RESOURCES PREPEND ${CMAKE_CURRENT_BINARY_DIR}/$<$<BOOL:$<CONFIG>>:$<CONFIG>/>)
 
 
 
